5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1800_2563.log
== SUBMITION (2019-06-11 10:57:24) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in (size(v)):
		if(x >=5)and (x<=7):
			aux+=1
	print(aux)
	
-- EXECUTION TIME:
1.1672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 6, in <module>
    for i in (size(v)):
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:57:26) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in (size(v)):
		if(x >=5)and (x<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:58:17) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in v:
		if(x >=5)and (x<=7):
			aux+=1
	print(aux)
	
-- EXECUTION TIME:
0.915453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    if(x >=5)and (x<=7):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:58:19) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in v:
		if(x >=5)and (x<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:58:38) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in v:
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:59:05) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in v:
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:03:50) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(v):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- EXECUTION TIME:
1.12426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 6, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:03:52) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(v):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:04:18) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(v):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:24) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:41) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:14:11) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:14:20) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- EXECUTION TIME:
4.50344
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Digite: 1
Digite: 3
Digite: 3
Digite: 3
Digite:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
Digite: 3
Digite: 3
Digite: 3
Digite:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Digite: 3
Digite: 1
Digite:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:15:09) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- EXECUTION TIME:
514.816
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:15:10) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:15:11) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- EXECUTION TIME:
4.30535
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
2
2
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
2
2
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:16:09) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- EXECUTION TIME:
1.8387
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
2
2
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
2
2
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:16:19) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:16:36) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:17:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- EXECUTION TIME:
2.6639
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
1
2
2
2
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
2
2
2
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Digite: 2
Digite: 1
Digite:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:18:38) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in v:
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- EXECUTION TIME:
2.18645
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:20:03) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in range(size(v)):
		if(i >=5)and (i<=7):
			aux+=1
	print(aux)
	
-- EXECUTION TIME:
554.176
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:29:46) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))

while (size(v)>1):
	aux=0
	for i in v:
		if(i >=5)and (i<7):
			aux+=1
	print(aux)
	v = array(eval(input("Digite: ")))
	
-- EXECUTION TIME:
1.21459
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
